# learn-to-write-a-database

./: Cargo.toml
src/: lib.rs
src/backend/: mod.rs
src/backend/memory/: mod.rs
src/statements/: compiler.rs  create.rs  insert.rs  mod.rs  select.rs
src/statements/scanner/: mod.rs
