[package]
name = "learn-to-write-a-database"
version = "0.1.0"
authors = ["Jack Liddiard <admin@deadcore.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.7"
ndarray = "0.13.1"

[[bin]]
name = 'learn-to-write-a-database'
path = 'src/bin/main.rs'